<resources>
	<string name="app_name">CriminalIntent</string>
	
	<string name="crime_title_hint">Enter title title</string>
	<string name="crime_title_label">Title</string>
	<string name="crime_details_label">Detail</string>
	<string name="crime_solved_label">Solved</string>
	
	<string name="hello_blank_fragment">Hello blank fragment</string>
	
	<string name="call_police_button_text">Call Police</string>
	<string name="you_called_police_alert">You called police. We will come in %d minutes!</string>
	
	<string name="to_beginning_button_label">To beginning</string>
	<string name="to_end_button_label">To end</string>
	
	<string name="date_of_crime_label">Crime date:</string>
	
	<string name="close_button_label">Close</string>
	
	
	<string name="new_crime">New crime</string>
	<string name="show_subtitle">Show Count</string>
	<string name="hide_subtitle">Hide count</string>
	
	<plurals name="subtitle_plural">
		
		<item quantity="zero">No crimes</item>
		<item quantity="one">%1$d crime</item>
		<item quantity="other">%1$d crimes</item>
	</plurals>
	
	<string name="delete_crime">Delete crime</string>
	
	<string name="there_are_no_crimes_yet">There are no crimes yet</string>
	
	<string name="crime_choose_suspect_label">Choose suspect</string>
	<string name="report_crime_label">Report suspect</string>
	
	
	<string name="crime_report">%1$s!\nThe crime was discovered on %2$s. %3$s, and %4$s</string>
	<string name="crime_report_solved">The case is solved</string>
	<string name="crime_report_unsolved">The case is not solved</string>
	<string name="crime_report_no_suspect">there is no suspect.</string>
	<string name="crime_report_suspect">the suspect is $1%s.</string>
	<string name="crime_report_subject">CriminalIntent Crime Report</string>
	<string name="send_report">Send crime report via</string>
	
	<string name="choose_app_to_share">Choose app to share:</string>
	
	<string name="read_contacts_permission_reason">We just need to now crimer\'s name.</string>
	
	<string name="crime_photo_button_description">Take photo of crime scene</string>
	<string name="crime_photo_no_image_description">Crime scene photo (not set)</string>
	<string name="crime_photo_image_description">Crime scene photo (set)</string>
	
	<string name="crime_item_description">Crime "%1$s" happened on %2$s, %3$s</string>
	<string name="not_solved">not solved yet</string>
	<string name="solved">already solved</string>
	
	<string name="change_crime_date">Change crime date</string>
	<string name="change_crime_time">Change crime time</string>
	<string name="call_suspect">Call suspect</string>
	<string name="choose_another_suspect_description">Suspect %1$s selected. Tap to choose another suspect</string>
	<string name="share_the_crime">Share the crime</string>
	
	<string name="photo_was_changed_acc_announce">Photo was changed</string>
	
</resources>
