<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:orientation="vertical"
	android:padding="16dp">
	<TextView
		style="?android:listSeparatorTextViewStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/crime_title_label"/>
	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/crime_title_hint"
		android:id="@+id/crime_title_edit_view_id"
		/>
	
	<TextView
		style="?android:listSeparatorTextViewStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/crime_details_label"/>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="2">
		
		<Button
			android:id="@+id/crime_date_button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="16dp"
			android:layout_weight="1"/>
		
		<Button
			android:id="@+id/crime_time_button"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_marginHorizontal="16dp"
			android:layout_height="wrap_content" />
	</LinearLayout>
	
	<CheckBox
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/crime_solved_label"
		android:id="@+id/crime_solved_id"/>
	
	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/choose_suspect_button_id"
		android:text="@string/crime_choose_suspect_label"
		/>
	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/report_crime_button_id"
		android:text="@string/report_crime_label"
		/>
</LinearLayout>