<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:orientation="vertical"
	android:padding="16dp">
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			
			<ImageView
				android:id="@+id/crime_photo_id"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:scaleType="centerInside"
				android:cropToPadding="true"
				android:background="@android:color/darker_gray"
				app:srcCompat="@android:drawable/ic_menu_gallery" />
			
			<ImageButton
				android:id="@+id/crime_camera_button_id"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:srcCompat="@android:drawable/ic_menu_camera" />
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			
			<TextView
				style="?android:listSeparatorTextViewStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/crime_title_label" />
			
			<EditText
				android:id="@+id/crime_title_edit_view_id"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/crime_title_hint" />
		</LinearLayout>
	</LinearLayout>
	
	<TextView
		style="?android:listSeparatorTextViewStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/crime_details_label"/>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="2">
		
		<Button
			android:id="@+id/crime_date_button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginRight="16dp"
			android:layout_weight="1"/>
		
		<Button
			android:id="@+id/crime_time_button"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content" />
	</LinearLayout>
	
	<CheckBox
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/crime_solved_label"
		android:id="@+id/crime_solved_id"/>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/choose_suspect_button_id"
			android:text="@string/crime_choose_suspect_label"
			android:layout_weight="0.7"
			/>
		<Button
			android:layout_marginLeft="16dp"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:id="@+id/call_criminal_button_id"
			android:background="@drawable/ic_call_icon"/>
	</LinearLayout>
	
	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/report_crime_button_id"
		android:text="@string/report_crime_label"
		/>
</LinearLayout>